--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
       .mymenu {
       margin:0 auto;
       background-color: #f9f9f9;
-      width:700px;
+      width:800px;
       border-radius:0 0 5px 5px;
       border: 2px solid #f9f9f9;
       font-weight:bold;
@@ -502,7 +502,7 @@
 	 <div id="show-login-menu">
 		 <button style="width:100px !important;  padding:4px; margin:4px; margin-left:10px; margin-bottom:10px;font-weight:bold" onclick="callmodalLogin();showLogin()">Login</button>
 		 <button style="width:100px !important; padding:4px; margin:4px; font-weight:bold" onclick="callmodalLogin();showRegistration()">Sign Up</button>
-		 <span style="font-size:13px; font-weight:normal; color:#555">One Login to access all my tools, join now, it's free :)</span>
+		 <span style="font-size:13px; font-weight:normal; color:#555">Only one login to access all my tools, join now, it's free :)</span>
 	</div>	 
 		 <div id="homepage" class="hide">
          <button style="width:100px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold" id="signout">Logout</button>
