--- a/mikrotik-bonding-interface.html
+++ b/mikrotik-bonding-interface.html
@@ -547,7 +547,7 @@
         © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a> - Made for <a target="_blank" href="https://www.mikrotik.com">MikroTik RouterOS</a>
       </div>
     </div>
-    <div id="myLogin" class="modal-login">
+    <div oncontextmenu="return false;" id="myLogin" class="modal-login">
     <div class="modal-content">
       <div class="forms-out">
         <div class="forms-in">
