--- a/nth.html
+++ b/nth.html
@@ -638,7 +638,7 @@
         /routing table remove [find comment="LB By BNT"]
       </div>
     </div>
-	<div id="myLogin" class="modal-login">
+	<div oncontextmenu="return false;" id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
           <div class="forms-in">
