--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -638,7 +638,7 @@
         4.Coba ping ke 1.1.1.1 atau 8.8.8.8 jika reply berarti anda sudah berhasil<br>
       </div>
     </div>
-	<div id="myLogin" class="modal-login">
+	<div oncontextmenu="return false;" id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
           <div class="forms-in">
