--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -601,7 +601,7 @@
         /ip address remove [find comment="EXPIRED By BNT"]<br>
       </div>
     </div>
-	<div id="myLogin" class="modal-login">
+	<div oncontextmenu="return false;" id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
           <div class="forms-in">
