--- a/static-routing-games.html
+++ b/static-routing-games.html
@@ -988,7 +988,7 @@
         /routing table remove [find comment="ROUTING-GAME-BY-BNT"]
       </div>
     </div>
-	<div id="myLogin" class="modal-login">
+	<div oncontextmenu="return false;" id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
           <div class="forms-in">
