--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
         © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Creator by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
       </div>
     </div>
-	<div id="myLogin" class="modal-login">
+	<div oncontextmenu="return false;" id="myLogin" class="modal-login">
       <div class="modal-content">
 	  <span class="close2">&times;</span>
         <div class="forms-out">
