--- a/login/index.html
+++ b/login/index.html
@@ -3,18 +3,10 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mikrotik RouterOS Auto Backup to E-Mail - BuanaNETPBun.Github.io</title>
+    <title>LOGIN - BuanaNETPBun.Github.io</title>
     <meta content='Mikrotik RouterOS Auto Backup to E-Mail Generator - BuanaNETPBun.Github.io' name='description'>
     <meta content='hotspot, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless, rtrwnet' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
-    <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
-    <meta property="og:title" content="Mikrotik RouterOS Auto Backup to E-Mail Generator By BuanaNET-Pbun">
-    <meta property="og:description" content="Mikrotik RouterOS Auto Backup to E-Mail Generator By BuanaNET-Pbun">
-    <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/185570614-f8e5d4b2-c09e-46ab-ab96-e565e5a82d40.png">
-    <meta property="og:image:alt" content="Mikrotik RouterOS Auto Backup to E-Mail Generator By BuanaNET-Pbun">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://buananetpbun.github.io/mikrotik-backup-to-mail.html">
-    <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
     <script async defer src="https://buttons.github.io/buttons.js"></script>  
     <style>
       /* -----------------------------------------------------------------
