--- a/login/index.html
+++ b/login/index.html
@@ -356,27 +356,6 @@
     </div>
 	<script>
 	
-document.getElementById("myLogin").addEventListener('contextmenu',(e)=>{
-e.preventDefault();
-}
-  );
-  document.onkeydown = function(e) {
-  if(event.keyCode == 123) {
-     return false;
-  }
-  if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-     return false;
-  }
-  if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
-     return false;
-  }
-  if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
-     return false;
-  }
-  if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
-     return false;
-  }
-}
 
 function CheckFunction() {
     var isModalLogin = document.getElementsByClassName('modal-login');
@@ -430,7 +409,7 @@ firebase.auth().onAuthStateChanged((user) => {
 	   
 	   document.getElementById('welcome-email').innerHTML = email
 	   
-	                       if(emailVerified == true){
+	                    if(emailVerified == true){
                         document.getElementById("verify").style.display = "none"
 						document.getElementById('email_Verified').innerHTML = "✅"
 						} else {
@@ -451,6 +430,9 @@ const user = firebase.auth().currentUser;
                     window.alert("Verification link sent to your email. if you don't see it, please check on the spam folder.")
                 }).catch(function(error) {
                 // An error happened.
+				 var errorCode = error.code;
+                var errorMessage = error.message;
+                alert(errorMessage);
                 });                
             }  
 			
