--- a/login/index.html
+++ b/login/index.html
@@ -304,7 +304,7 @@
       </div>
     </div>
     <div id="wrap">
-    <div oncontextmenu="return false;" id="myLogin" class="modal-login">
+    <div id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
           <div class="forms-in">
