--- a/login/index.html
+++ b/login/index.html
@@ -11,7 +11,7 @@
     <style>
       /* -----------------------------------------------------------------
       ####################################################################
-      # MIKROTIK ROUTER-OS AUTO BACKUP TO E-Mail SCRIPT GENERATOR
+      # LOGIN FORM BUANANETPBUN.GITHUB.IO
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://github.com/buananetpbun
       # Site      : http://www.o-om.com
@@ -128,7 +128,7 @@
       z-index: 10;
       margin:0 auto;
       background-color: #f9f9f9;
-      width:600px;
+      width:700px;
       border-radius:0 0 5px 5px;
       border: 2px solid #f9f9f9;
       font-weight:bold;
@@ -303,7 +303,6 @@
         <button id="verify" style="width:120px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px" onclick="sendVerificationEmail()">Verified Now!</button>
       </div>
     </div>
-    <div id="wrap">
     <div id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
