--- a/login/index.html
+++ b/login/index.html
@@ -399,7 +399,7 @@
 
      		if (emailVerified == true) {
      			document.getElementById("verify").style.display = "none"
-     			document.getElementById('email_Verified').innerHTML = "✅"
+     			document.getElementById('email_Verified').innerHTML = "✔️"
      		} else {
      			document.getElementById('email_Verified').innerHTML = "❌"
      		}
