--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -465,8 +465,8 @@
         <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
       </ul>
       <div id="homepage" class="hide">
-        <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold" id="signout">Logout</button>
-        <span style="font-weight:normal">ID: <span style="color:green" id="welcome-email"></span></span>
+        <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold;font-size:14px" id="signout">Logout</button>
+        <span style="font-weight:normal">ID: <span style="color:green;font-size:14px" id="welcome-email"></span></span>
         <span style="font-weight:normal; font-size:14px"> ** E-Mail Verified: <span style="" id="email_Verified"></span></span> 
         <button id="verify" style="width:120px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px" onclick="sendVerificationEmail()">Verified Now!</button>
       </div>
