--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@
         <span style="font-size:13px; font-weight:normal; color:#555">Only one login to access all my tools, join now, it's free :)</span>
       </div>
       <div id="homepage" class="hide">
-        <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold" id="signout">Logout</button>
-        <span style="font-weight:normal">ID: <span style="color:green" id="welcome-email"></span></span>
+        <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold;font-size:14px" id="signout">Logout</button>
+        <span style="font-weight:normal">ID: <span style="color:green;font-size:14px" id="welcome-email"></span></span>
         <span style="font-weight:normal; font-size:14px"> ** E-Mail Verified: <span style="" id="email_Verified"></span></span> 
         <button id="verify" style="width:120px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px" onclick="sendVerificationEmail()">Verified Now!</button>
       </div>
