--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -442,7 +442,7 @@
     <div id="wrap">
       <div class="mymenu">
         <ul>
-          <li><a target="_blank" href="https://buananetpbun.github.io">☰ ALL TOOLS</a></li>
+          <li><a target="_blank" href="https://buananetpbun.github.io">☰ HOME</a></li>
           <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
           <li><a href="javascript:callmodal()">DONATE</a></li>
           <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
