--- a/mikrotik-hotspot-wizard.html
+++ b/mikrotik-hotspot-wizard.html
@@ -237,7 +237,7 @@
     <body onLoad="callmodal()">
       <div class="mymenu">
         <ul>
-          <li><a target="_blank" href="https://buananetpbun.github.io">☰ ALL TOOLS</a></li>
+          <li><a target="_blank" href="https://buananetpbun.github.io">☰ HOME</a></li>
           <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
           <li><a href="javascript:callmodal()">DONATE</a></li>
           <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
