--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -454,7 +454,7 @@
     <div id="fb-root"></div>
     <div class="mymenu">
       <ul>
-        <li><a target="_blank" href="https://buananetpbun.github.io">☰ ALL TOOLS</a></li>
+        <li><a target="_blank" href="https://buananetpbun.github.io">☰ HOME</a></li>
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
