--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -144,6 +144,9 @@
       .footer a{
       color:#ff6600 !important;
       }
+      h2 {
+      color:#ff6600;;
+      }		  
       h1 {
       color:#fff;
       font-size:20px;
