--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -104,6 +104,9 @@
          width:auto;
          color:#ddd
          }
+      h2 {
+      color:#ff6600;;
+      }			 
          h1 {
          color:#777;
          font-size: 2em;
