--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
       background-color: #8c0615;
       border-color: #8c0615;
       }
-      .mymenu {
+	  .mymenu {
+      z-index: 4;
       margin:0 auto;
       background-color: #f9f9f9;
       width:650px;
@@ -282,6 +283,7 @@
       border: 2px solid #f9f9f9;
       font-weight:bold;
       font-size:14px;
+      position:relative;
       }
       .mymenu ul {
       list-style-type: none;
