--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -491,7 +491,7 @@
         <div style="float:left; width:100%;">
           <label><b>UPLOAD </b></label><br>
           <label>Max Limit (K/M)</label><br>
-          <input onkeydown="upperCaseF(this)" type="text" id="up-max-limit" style='color: green' placeholder="512K" value="512K" onkeyup="CheckFunction();myFunction()">
+          <input onkeydown="upperCaseF(this)" type="text" id="up-max-limit" style='color: green' placeholder="512K" value="512K" onkeyup="myFunction()">
         </div>
         <div style="float:left; width:100%;">
           <label>Burst Limit (K/M)</label><br>
@@ -519,7 +519,7 @@
         <div style="float:left; width:100%;">
           <label><b>DOWNLOAD</b></label><br>
           <label>Max Limit (K/M)</label><br>
-          <input onkeydown="upperCaseF(this)" type="text" id="down-max-limit" value="1M" style='color: green' placeholder="1M" onkeyup="CheckFunction();myFunction()" >
+          <input onkeydown="upperCaseF(this)" type="text" id="down-max-limit" value="1M" style='color: green' placeholder="1M" onkeyup="myFunction()" >
         </div>
         <div style="float:left; width:100%;">
           <label>Burst Limit (K/M)</label><br>
