--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -571,7 +571,7 @@
             </table>
           </div>
           <br>
-          <button style="margin-right:10px;" type="button" onclick="CheckFunction(); myFunction()">Generate Script</button>
+          <button style="margin-right:10px;" type="button" onclick="myFunction()">Generate Script</button>
           <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
           <span style="float:right;margin-bottom:15px; margin-top:0px;padding-left:20px" class="d-link"><a class="download" href="#" download="error.html">Download error.html</a></span><br>
           <div class="list-mangle2">
