--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -579,7 +579,7 @@
             <label>IP Public Check</label>
             <input type="text" id="wan6-public-ip-input" value="4.2.2.6" placeholder="4.2.2.6" disabled>
           </div>
-          <button style="margin-right:2px" type="button" onclick="CheckFunction(); myFunction()">Generate</button>
+          <button style="margin-right:2px" type="button" onclick="myFunction()">Generate</button>
           <button type="button" onclick="location.reload()">Clear All</button>
         </div>
         <div class="content">
