--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -515,7 +515,7 @@
           <input type="checkbox" id="mikrotik-ipcloud" onclick="myCheck()">
           <label for="mikrotik-ipcloud">Block IP Cloud</label>
           <div style="margin-top:30px"></div>
-          <button style="margin-top:-5px" type="button" onclick="CheckFunction(); myFunction()">Generate</button> 
+          <button style="margin-top:-5px" type="button" onclick="myFunction()">Generate</button> 
           <button style="margin-top:-5px" type="button" onclick="selectElementContents(document.getElementById('list-output-r1'))">Copy Script</button> 
           <div class="list-mangle">
             <div id="list-output-r1">
