--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -481,7 +481,7 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>
     <div class="mymenu">
       <ul>
-        <li><a target="_blank" href="https://buananetpbun.github.io">☰ ALL TOOLS</a></li>
+        <li><a target="_blank" href="https://buananetpbun.github.io">☰ HOME</a></li>
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
@@ -529,7 +529,7 @@
             <label >Password / Wi-Fi Key</label><br>
             <input style='margin-top:5px' type="text" id="input-password" value="12345678" placeholder="Password">
           </div>
-          <button style="margin-bottom: 20px;" type="button" onclick="CheckFunction();myFunctionInput()">Generate QR Code</button>
+          <button style="margin-bottom: 20px;" type="button" onclick="myFunctionInput()">Generate QR Code</button>
           <div style="clear: both;"></div>
           <label>Template Size</label>
           <select id="template-size" onchange="myFunctionInput()">
