--- a/nth.html
+++ b/nth.html
@@ -538,7 +538,7 @@
             <label>Gateway ISP-6</label>
             <input type="text" id="wan6-isp-ip" placeholder="Ex: 192.168.6.1" disabled >
           </div>
-          <button style="margin-right:2px" type="button" onclick="CheckFunction(); myFunctionInput()">Generate</button>
+          <button style="margin-right:2px" type="button" onclick="myFunctionInput()">Generate</button>
           <button type="button" onclick="location.reload()">Clear All</button>
         </div>
         <div class="content">
