--- a/mikrotik-dns-over-https-doh.html
+++ b/mikrotik-dns-over-https-doh.html
@@ -478,7 +478,7 @@
         <h1>MIKROTIK <span style="color:#ff6600">DNS over HTTPS (DoH)</span> SERVER GENERATOR</h1>
       </div>
       <div class="sidebar">
-        <select style="font-size:15px" id="dns-list" onchange="CheckFunction(); myFunction()">
+        <select style="font-size:15px" id="dns-list" onchange="myFunction()">
           <option value="00">AdGuard DNS - 94.140.14.14</option>
           <option value="07">Cloudflare DNS - 1.1.1.1</option>
           <option value="06">Cisco OpenDNS - 208.67.222.222</option>
